--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     
                     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
 
-                        <a class="okayNav-header__logo navbar-brand" href="#">
+                        <a class="okayNav-header__logo navbar-brand" href="index.html">
                             <img src="images/logo.png" alt="" class="logo-1 img-responsive">
                             <img src="images/logo-dark.png" alt="" class="logo-2 img-responsive">
                         </a>
@@ -65,11 +65,11 @@
 
                         <nav role="navigation" class="okayNav pull-right" id="js-navbar-menu">
                             <ul id="navbar-nav" class="navbar-nav">
-                                <li><a class="btn-nav" href="#features">Features</a></li>
-                                <li><a class="btn-nav" href="#pricing">Pricing</a></li>
-                                <li><a class="btn-nav" href="#reviews">Reviews</a></li>
-                                <li><a class="btn-nav" href="#" data-toggle="modal" data-target="#sign-in-form">Sign In</a></li>
-                                <li><a class="btn-nav btn-border" href="#" data-toggle="modal" data-target="#sign-up-form">Sign Up</a></li>
+                                <li><a class="btn-nav" href="index.html">HOME</a></li>
+                                <li><a class="btn-nav" href="#pricing">HACKATHON</a></li>
+                                <li><a class="btn-nav" href="#reviews">CONFERENCE</a></li>
+                                <li><a class="btn-nav" href="#reviews">CONTACT</a></li>
+                                <li><a class="btn-nav" href="#reviews">ABOUT</a></li>
                             </ul>
                         </nav>
 
