--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                         <div class="part-inner text-center">
 
                             <!--  Header SubTitle Goes here -->
-                            <h1 class="title">Ganesh</h1>
+                            <h1 class="title">Confederation of Indian Industry</h1>
 
                             <div class="detail">
                                 <p>Use this template to promote and describe the benefits of your product.</p>
