--- a/index.html
+++ b/index.html
@@ -66,29 +66,6 @@
                 <!-- End: .col-xs-3 -->
                 <div class="col-lg-9 col-md-9 col-sm-9 col-xs-6">
 
-                    <nav role="navigation" class="okayNav pull-right" id="js-navbar-menu">
-                        <ul id="navbar-nav" class="navbar-nav">
-                            <li><a class="btn-nav" href="#features">Features</a></li>
-                            <li><a class="btn-nav" href="#pricing">Pricing</a></li>
-                            <li><a class="btn-nav" href="#reviews">Reviews</a></li>
-                            <li><a class="btn-nav" href="#" data-toggle="modal" data-target="#sign-in-form">Sign In</a></li>
-                            <li><a class="btn-nav btn-border" href="#" data-toggle="modal" data-target="#sign-up-form">Sign Up</a></li>
-                        </ul>
-                    </nav>
-
-                </div>
-                <!-- End: .col-xs-9 -->
-            </div>
-            <!-- End: .row -->
-        </div>
-        <!-- End: .container -->
-    </header>
-    <!-- /header -->
-    <!-- End: Navbar Area
-=======
-                    </div> <!-- End: .col-xs-3 -->
-                    <div class="col-lg-9 col-md-9 col-sm-9 col-xs-6">
-
                         <nav role="navigation" class="okayNav pull-right" id="js-navbar-menu">
                             <ul id="navbar-nav" class="navbar-nav">
                                 <li><a class="btn-nav" href="index.html">HOME</a></li>
@@ -99,126 +76,17 @@
                             </ul>
                         </nav>
 
-                    </div> <!-- End: .col-xs-9 -->
-                </div> <!-- End: .row -->
-            </div> <!-- End: .container -->
-        </header><!-- /header -->
-        <!-- End: Navbar Area
->>>>>>> origin/master
-        ============================= -->
-
-
-
-
-    <!-- Start: Sign In Form
-        ================================== -->
-    <div id="sign-in-form" class="sign-form modal fade" tabindex="-1" role="dialog">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-
-                <!-- Modal Close Button -->
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-
-                <form method="post" class="single-form" action="">
-
-                    <div class="col-xs-12 text-center">
-                        <h2 class="section-heading p-b-30">Sign In</h2>
                     </div>
-
-                    <div class="col-xs-12">
-                        <!-- Email -->
-                        <input name="email" class="contact-email form-control" type="email" placeholder="Email*" required="">
-                    </div>
-                    <div class="col-xs-12">
-                        <!-- Subject -->
-                        <input name="password" class="contact-password form-control" type="pass" placeholder="Password">
-                    </div>
-
-                    <div class="col-xs-12">
-                        <div class="checkbox">
-                            <input type="checkbox" id="remember-me">
-                            <label for="remember-me">Remember me</label>
-                        </div>
-                    </div>
-
-                    <!-- Subject Button -->
-                    <div class="btn-form text-center col-xs-12">
-                        <button class="btn btn-fill">Sign In</button>
-                    </div>
-                </form>
-
+                <!-- End: .col-xs-9 -->
             </div>
-            <!-- End: .modal-content -->
+            <!-- End: .row -->
         </div>
-        <!-- End: .modal-dialog -->
-    </div>
-    <!-- End: .modal -->
-    <!-- End: Sign In Form
-        ================================== -->
+        <!-- End: .container -->
+    </header>
+    <!-- /header -->
+    <!-- End: Navbar Area
 
 
-
-
-    <!-- Start: Sign Out Form
-        ================================== -->
-    <div id="sign-up-form" class="sign-form modal fade" tabindex="-1" role="dialog">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content p-t-30 p-b-30">
-
-                <!-- Modal Close Button -->
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-
-                <form method="post" class="single-form" action="">
-
-                    <div class="col-xs-12 text-center">
-                        <h2 class="section-heading p-b-30">Sign Up</h2>
-                    </div>
-
-                    <div class="col-xs-12">
-                        <!-- First Name -->
-                        <input name="text" class="contact-first-name form-control" type="text" placeholder="First Name*" required="">
-                    </div>
-                    <div class="col-xs-12">
-                        <!-- Last Name -->
-                        <input name="text" class="contact-last-name form-control" type="text" placeholder="Last Name*" required="">
-                    </div>
-                    <div class="col-xs-12">
-                        <!-- Email -->
-                        <input name="email" class="contact-email form-control" type="email" placeholder="Email*" required="">
-                    </div>
-                    <div class="col-xs-12">
-                        <!-- Subject -->
-                        <input name="password" class="contact-password form-control" type="pass" placeholder="Password">
-                    </div>
-                    <div class="col-xs-12">
-                        <!-- Subject -->
-                        <input name="password" class="contact-cmp-password form-control" type="pass" placeholder="Confirm Password">
-                    </div>
-                    <div class="col-xs-12">
-                        <div class="checkbox">
-                            <input type="checkbox" id="agreement">
-                            <label for="agreement">I agree to Your Terms of Service </label>
-                        </div>
-                    </div>
-
-                    <!-- Subject Button -->
-                    <div class="btn-form text-center col-xs-12">
-                        <button class="btn btn-fill">Sign Up</button>
-                    </div>
-                </form>
-
-            </div>
-            <!-- End: .modal-content -->
-        </div>
-        <!-- End: .modal-dialog -->
-    </div>
-    <!-- End: .modal -->
-    <!-- End: Sign Out Form
-        ================================== -->
 
 
 
@@ -282,10 +150,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="each-features col-sm-6">
+
+                   <a href="conference.html">
+                   <div class="each-features col-sm-6" style="width: 550px;">
                     <div class="inner text-center bg-cover light-text zoomer" style="background-image: url(images/bg-conf.jpg);">
                         <div class="overlay-color">
-
                             <div class="group">
                                 <h4 class="title">CONFERENCE</h4>
                                 <!--<div class="detail">
@@ -296,6 +165,7 @@
                         </div>
                     </div>
                 </div>
+                </a>
 
 
             </div>
