--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     </div>
                 </div>
 
-                   <a href="conference.html">
+                   <a href="index.html">
                    <div class="each-features col-sm-6" style="width: 550px;">
                     <div class="inner text-center bg-cover light-text zoomer" style="background-image: url(images/bg-conf.jpg);">
                         <div class="overlay-color">
