--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
     <!-- Start: Header Section
         ================================ -->
-    <section class="header-section-1 bg-image-1 header-js" id="header">
+    <section class="header-section-1 bg-image-1 header-js" id="header" style="height: 100vh;">
         <div class="overlay-color">
             <div class="container">
                 <div class="row section-separator">
@@ -151,7 +151,7 @@
                     </div>
                 </div>
 
-                   <a href="conference.htm">
+                   <a href="conference.html">
                    <div class="each-features col-sm-6" style="width: 550px;">
                     <div class="inner text-center bg-cover light-text zoomer" style="background-image: url(images/bg-conf.jpg);">
                         <div class="overlay-color">
