--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <ul id="navbar-nav" class="navbar-nav">
                 <li><a class="btn-nav" href="index.html">HOME</a></li>
                 <li><a class="btn-nav" href="#pricing">HACKATHON</a></li>
-                <li><a class="btn-nav" href="#reviews">CONFERENCE</a></li>
+                <li><a class="btn-nav" href="conference.html">CONFERENCE</a></li>
                 <li><a class="btn-nav" href="#reviews">CONTACT</a></li>
                 <li><a class="btn-nav" href="#reviews">ABOUT</a></li>
             </ul>
@@ -87,119 +87,6 @@
     <!-- End: Navbar Area
 =======
                     </div> <!-- End: .col-xs-3 -->
-
-
-
-    <!-- Start: Sign In Form
-        ================================== -->
-    <div id="sign-in-form" class="sign-form modal fade" tabindex="-1" role="dialog">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-
-                <!-- Modal Close Button -->
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-
-                <form method="post" class="single-form" action="">
-
-                    <div class="col-xs-12 text-center">
-                        <h2 class="section-heading p-b-30">Sign In</h2>
-                    </div>
-
-                    <div class="col-xs-12">
-                        <!-- Email -->
-                        <input name="email" class="contact-email form-control" type="email" placeholder="Email*" required="">
-                    </div>
-                    <div class="col-xs-12">
-                        <!-- Subject -->
-                        <input name="password" class="contact-password form-control" type="pass" placeholder="Password">
-                    </div>
-
-                    <div class="col-xs-12">
-                        <div class="checkbox">
-                            <input type="checkbox" id="remember-me">
-                            <label for="remember-me">Remember me</label>
-                        </div>
-                    </div>
-
-                    <!-- Subject Button -->
-                    <div class="btn-form text-center col-xs-12">
-                        <button class="btn btn-fill">Sign In</button>
-                    </div>
-                </form>
-
-            </div>
-            <!-- End: .modal-content -->
-        </div>
-        <!-- End: .modal-dialog -->
-    </div>
-    <!-- End: .modal -->
-    <!-- End: Sign In Form
-        ================================== -->
-
-
-
-
-    <!-- Start: Sign Out Form
-        ================================== -->
-    <div id="sign-up-form" class="sign-form modal fade" tabindex="-1" role="dialog">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content p-t-30 p-b-30">
-
-                <!-- Modal Close Button -->
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-
-                <form method="post" class="single-form" action="">
-
-                    <div class="col-xs-12 text-center">
-                        <h2 class="section-heading p-b-30">Sign Up</h2>
-                    </div>
-
-                    <div class="col-xs-12">
-                        <!-- First Name -->
-                        <input name="text" class="contact-first-name form-control" type="text" placeholder="First Name*" required="">
-                    </div>
-                    <div class="col-xs-12">
-                        <!-- Last Name -->
-                        <input name="text" class="contact-last-name form-control" type="text" placeholder="Last Name*" required="">
-                    </div>
-                    <div class="col-xs-12">
-                        <!-- Email -->
-                        <input name="email" class="contact-email form-control" type="email" placeholder="Email*" required="">
-                    </div>
-                    <div class="col-xs-12">
-                        <!-- Subject -->
-                        <input name="password" class="contact-password form-control" type="pass" placeholder="Password">
-                    </div>
-                    <div class="col-xs-12">
-                        <!-- Subject -->
-                        <input name="password" class="contact-cmp-password form-control" type="pass" placeholder="Confirm Password">
-                    </div>
-                    <div class="col-xs-12">
-                        <div class="checkbox">
-                            <input type="checkbox" id="agreement">
-                            <label for="agreement">I agree to Your Terms of Service </label>
-                        </div>
-                    </div>
-
-                    <!-- Subject Button -->
-                    <div class="btn-form text-center col-xs-12">
-                        <button class="btn btn-fill">Sign Up</button>
-                    </div>
-                </form>
-
-            </div>
-            <!-- End: .modal-content -->
-        </div>
-        <!-- End: .modal-dialog -->
-    </div>
-    <!-- End: .modal -->
-    <!-- End: Sign Out Form
-        ================================== -->
-
 
 
 
