--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/aos.css">
     <link rel="stylesheet" href="css/style.css">
 
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 
 
@@ -21,18 +22,59 @@
         <div class="navbar-fixed">
             <nav class="blue darken-4">
                 <div class="nav-wrapper container">
+                    <a href="#" data-target="slide-out" class="sidenav-trigger hide-on-large">
+                        <i class="material-icons">menu</i>
+                    </a>
                     <a href="#!" class="brand-logo">Logo</a>
                     <ul class="right hide-on-med-and-down">
                         <li>
-                            <a href="sass.html">Sass</a>
+                            <a class="waves-effect" href="index.html">Home</a>
                         </li>
                         <li>
-                            <a href="badges.html">Components</a>
+                            <a class="waves-effect" href="hackathon.html">Hackathon</a>
+                        </li>
+                        <li>
+                            <a class="waves-effect" href="conference.html">Conference</a>
+                        </li>
+                        <li>
+                            <a class="waves-effect" href="about.html">About</a>
+                        </li>
+                        <li>
+                            <a class="waves-effect" href="contact.html">Contact</a>
                         </li>
                     </ul>
                 </div>
             </nav>
         </div>
+
+        <!-- Mobile menu -->
+
+        <ul id="slide-out" class="sidenav">
+            <li>
+                <a class="waves-effect" href="index.html">Home</a>
+            </li>
+            <li>
+                <a class="waves-effect" href="hackathon.html">Hackathon</a>
+            </li>
+            <li>
+                <a class="waves-effect" href="conference.html">Conference</a>
+            </li>
+            <li>
+                <a class="waves-effect" href="about.html">About</a>
+            </li>
+            <li>
+                <a class="waves-effect" href="contact.html">Contact</a>
+            </li>
+        </ul>
+
+
+
+
+
+
+
+
+
     </header>
 
     <main>
@@ -53,20 +95,24 @@
                     <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
                 </div>
                 <div class="col l4 offset-l2 s12">
-                    <h5 class="white-text">Links</h5>
+                    <h5 class="white-text">Sitemap</h5>
                     <ul>
                         <li>
-                            <a class="grey-text text-lighten-3" href="#!">Link 1</a>
+                            <a class="waves-effect grey-text text-lighten-3" href="index.html">Home</a>
                         </li>
                         <li>
-                            <a class="grey-text text-lighten-3" href="#!">Link 2</a>
+                            <a class="waves-effect grey-text text-lighten-3" href="hackathon.html">Hackathon</a>
                         </li>
                         <li>
-                            <a class="grey-text text-lighten-3" href="#!">Link 3</a>
+                            <a class="waves-effect grey-text text-lighten-3" href="conference.html">Conference</a>
                         </li>
                         <li>
-                            <a class="grey-text text-lighten-3" href="#!">Link 4</a>
+                            <a class="waves-effect grey-text text-lighten-3" href="about.html">About</a>
                         </li>
+                        <li>
+                            <a class="waves-effect grey-text text-lighten-3" href="contact.html">Contact</a>
+                        </li>
+
                     </ul>
                 </div>
             </div>
