--- a/index.html
+++ b/index.html
@@ -78,10 +78,53 @@
     </header>
 
     <main>
+        <section>
+
+            <div class="slider" id="hero-slider">
+
+                <ul class="slides">
+
+                    <li>
+                        <img src="images/hero-slider/1.jpg">
+                        <div class="caption center">
+                            <h1>IndNX 4.0</h1>
+                            <p>Date: XX Month 2018</p>
+                            <a href="https://reg.form.link" class="btn btn-register-hero">Register now</a>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="images/hero-slider/2.jpg">
+                        <div class="caption center">
+                            <h1>IndNX 4.0</h1>
+                            <p>Date: XX Month 2018</p>
+                            <a href="https://reg.form.link" class="btn btn-register-hero">Register now</a>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="images/hero-slider/3.jpg">
+                        <div class="caption center">
+                            <h1>IndNX 4.0</h1>
+                            <p>Date: XX Month 2018</p>
+                            <a href="https://reg.form.link" class="btn btn-register-hero">Register now</a>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="images/hero-slider/4.jpg">
+                        <div class="caption center">
+                            <h1>IndNX 4.0</h1>
+                            <p>Date: XX Month 2018</p>
+                            <a href="https://reg.form.link" class="btn btn-register-hero">Register now</a>
+                        </div>
+                    </li>
+
+                </ul>
+            </div>
+        </section>
 
 
-
-
+        <section class="container">
+            <h1>Hello</h1>
+        </section>
 
 
 
@@ -130,6 +173,7 @@
     <script src="js/materialize.min.js"></script>
     <script src="js/aos.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/home.js"></script>
 </body>
 
 </html>
