--- a/Hackathon.html
+++ b/Hackathon.html
@@ -85,17 +85,14 @@
                 <div class="container">
                     <br><br>
 
-                    <br><br>
+                    <br><br><br><br><br><br><br><br>
 
                     <h1 class="header center white-text">CII-HACKATHON</h1>
 
                 </div>
             </div>
-            <div class="parallax"><img src="images/gg-hak.jpg" alt="Unsplashed background img 1" style="opacity: 0.9; filter: grayscale(20%);"></div>
+            <div class="parallax"><img src="images/business-commerce-computer-132700.jpg" alt="Unsplashed background img 1" style="opacity: 0.9;    filter: brightness(50%) saturate(150%);"></div>
         </div>
-
-
-
 
     </main>
 
