--- a/Hackathon.html
+++ b/Hackathon.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>IndNX 4.0</title>
+    <title>IndNX 4.0 | Hackathon</title>
 
     <link rel="stylesheet" href="css/materialize.min.css">
     <link rel="stylesheet" href="css/aos.css">
@@ -94,9 +94,25 @@
             <div class="parallax"><img src="images/business-commerce-computer-132700.jpg" alt="Unsplashed background img 1" style="opacity: 0.9;    filter: brightness(50%) saturate(150%);"></div>
         </div>
 
+        <br><br><br>
+        <div class="row container" style="height: 300px;">
+            <div class="col s5 grey lighten-3" style="height: 300px; width: 450px;">
+                <h4 style="text-align: center;">
+                    Last Date
+                </h4>
+                <br>
+                <h6>
+
+                </h6>
+            </div>
+            <div class="col s5 grey lighten-3" style="height: 300px; margin-left: 60px; width: 450px;">
+
+            </div>
+        </div>
+
     </main>
 
-    <footer class="page-footer white">
+    <footer class="page-footer white" style="border-top: 8px solid orange">
         <div class="container">
             <div class="row">
                 <div class="col l6 s12">
