--- a/conference.html
+++ b/conference.html
@@ -137,7 +137,7 @@
         </section>
         <div class="divider"></div>
 
-        <section class="padded-top-cozy padded-bottom-cozy grey lighten-2">
+        <!--<section class="padded-top-cozy padded-bottom-cozy grey lighten-2">
             <div class="container">
                 <div class="row">
 
@@ -159,7 +159,7 @@
 
                 </div>
             </div>
-        </section>
+        </section>-->
 
 
 
