--- a/conference.html
+++ b/conference.html
@@ -129,10 +129,7 @@
 
                 <!--<h6 class="center light grey-text">About</h6>-->
                 <h3 class="center light orange-text text-darken-4 ">Some highlights of event</h3>
-                <p class="center  text-darken-2 padded-top-compact flow-text light">Some paragraph with description of event. Paragraph text. Paragraph text. Paragraph text. Paragraph text.
-                    Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph
-                    text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text.
-                    Paragraph text. Paragraph text. Paragraph text. </p>
+                <p class="center  text-darken-2 padded-top-compact flow-text light">Some paragraph with description of event. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. </p>
             </div>
         </section>
         <div class="divider"></div>
@@ -168,16 +165,15 @@
 
         <section class="padded-top-comfortable">
 
-            <h3 class="center light orange-text text-darken-4 padded-bottom-comfortable">About the organizers</h3>
+            <h3 class="center light orange-text text-darken-4 padded-bottom-comfortable">SPEAKERS</h3>
 
             <div class="row no-margin  grey lighten-2">
 
                 <img class="col no-padding s12 l5" src="images/hero-slider/3.jpg" alt="image">
                 <div class="col s12 l7">
                     <div class="padded-cozy">
-                        <h5 class="light orange-text text-darken-4 text-darken-2">Organizer</h5>
-                        <p class="light grey-text text-darken-2">Some really long and boring text. Text Text Text Text Text Text Text Text Text Text Text Text Text
-                            Text Text Text Text Text Text Text Text Text Text Text Text Text Text</p>
+                        <h5 class="light orange-text text-darken-4 text-darken-2">Speaker</h5>
+                        <p class="light grey-text text-darken-2">Some really long and boring text. Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text</p>
                     </div>
                 </div>
 
@@ -187,9 +183,8 @@
                 <img class="col no-padding s12 l5 push-l7" src="images/hero-slider/3.jpg" alt="image">
                 <div class="col s12 l7 pull-l5">
                     <div class="padded-cozy">
-                        <h5 class="right-align light orange-text text-darken-4 text-darken-2">Organizer</h5>
-                        <p class="right-align light grey-text text-darken-2">Some really long and boring text. Text Text Text Text Text Text Text Text Text Text Text Text Text
-                            Text Text Text Text Text Text Text Text Text Text Text Text Text Text</p>
+                        <h5 class="right-align light orange-text text-darken-4 text-darken-2">Speaker</h5>
+                        <p class="right-align light grey-text text-darken-2">Some really long and boring text. Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text</p>
                     </div>
                 </div>
             </div>
@@ -198,9 +193,8 @@
 
                 <div class="col s12 l7">
                     <div class="padded-cozy">
-                        <h5 class="light orange-text text-darken-4 text-darken-2">Organizer</h5>
-                        <p class="light grey-text text-darken-2">Some really long and boring text. Text Text Text Text Text Text Text Text Text Text Text Text Text
-                            Text Text Text Text Text Text Text Text Text Text Text Text Text Text</p>
+                        <h5 class="light orange-text text-darken-4 text-darken-2">Speaker</h5>
+                        <p class="light grey-text text-darken-2">Some really long and boring text. Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text</p>
                     </div>
                 </div>
 
@@ -244,14 +238,14 @@
 
 
 
-<!-- Map -->
-<section style="width: 100%; padding: 0px" id="venue-container">
+        <!-- Map -->
+        <section style="width: 100%; padding: 0px" id="venue-container">
 
-    <iframe class="googlemaps" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14888.734079617625!2d79.0034903!3d21.1052484!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x4fd4cb2d05b49c7d!2sG.+H.+Raisoni+College+of+Engineering!5e0!3m2!1sen!2sin!4v1529742413020" style="border:0;  width: 100%; height: 400px;" allowfullscreen></iframe>
+            <iframe class="googlemaps" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14888.734079617625!2d79.0034903!3d21.1052484!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x4fd4cb2d05b49c7d!2sG.+H.+Raisoni+College+of+Engineering!5e0!3m2!1sen!2sin!4v1529742413020" style="border:0;  width: 100%; height: 400px;" allowfullscreen></iframe>
 
 
 
-</section>
+        </section>
 
 
 
